--- a/html_01.html
+++ b/html_01.html
@@ -9,12 +9,8 @@
 	<title>Test</title>
 </head>
 <body style="background: var(--background-color);">
-	<div id="spinner" class="box">
-		<div class="spinner type1">
-			<span>Loading...</span>
-		</div>
-	</div>
-
+	<h1 id="message">None</h1>
+	<h1 id="message_data">None</h1>
 	<script>
 		// --- Utility ---
 		function isEmpty(value, allowEmptyString) {
@@ -30,6 +26,9 @@
 		function onMessage(e) {
 			const data = e.data;
 
+			document.getElementById("message_data").innerText = data.message;
+			document.getElementById("message").innerText = data;
+			
 			console.log("📩 Message event received:", data);
 
 			if (!data) {
