--- a/html_01.html
+++ b/html_01.html
@@ -76,7 +76,7 @@
 
 			// Redirect to initial page
 			console.log("➡️ Redirecting to ./system/workflowlist/workflowlist.html");
-			#window.location.replace('./system/workflowlist/workflowlist.html');
+			// window.location.replace('./system/workflowlist/workflowlist.html');
 
 			// Hide spinner
 			document.getElementById("spinner").classList.add('loaded');
